[package]
name = "gen-stream"
version = "0.2.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["async"]
categories = ["asynchronous", "rust-patterns"]
repository = "https://github.com/vorot93/gen-stream"
documentation = "https://docs.rs/gen-stream"
description = """
Generator-based streams for Rust and futures 0.3.
"""

[dependencies]
futures-preview = "0.3.0-alpha.13"
pin-utils = "0.1.0-alpha.4"

[dev-dependencies]
futures-preview = { version = "0.3.0-alpha.13", features = ["compat"] }
tokio = "0.1"

[badges]
maintenance = { status = "actively-developed" }
